--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -48,7 +48,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </h2>
                         <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                             <p class="slds-text-body slds-p-vertical_xx-small">
-                                <apex:outputText value="{!eventPage.Event_Full_Text__c}"/>
+                                <apex:outputText escape="false" value="{!eventPage.Event_Full_Text__c}"/>
                             </p>
                         </div>
                     </apex:outputPanel>
