--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -21,7 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <apex:messages />
+                    <apex:messages/>
                 </div>
 
                 <apex:form id="SummitEventsRegisterAppointmentsForm" styleClass="slds-grid slds-wrap">
@@ -107,7 +107,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                                         <textarea required="required" class="appointmentCustomInput required slds-textarea"></textarea>
                                                     </apex:outputPanel>
 
-                                                    <apex:outputPanel layout="none" rendered="{!apt.appInput == 'Custom pick list' || apt.appInput == 'Required custom pick list' || !ISBLANK(apt.appCategory)}">
+                                                    <apex:outputPanel layout="none" rendered="{!apt.appInput == 'Custom pick list' || apt.appInput == 'Required custom pick list' || !ISBLANK(apt.appCategory) && !ISNULL(apt.picklistItemList) && !apt.appTypeSet}">
                                                         <apex:outputPanel layout="none" rendered="{!apt.picklistItemList.size > 0}">
                                                             <div class="slds-select_container">
                                                                 <apex:outputPanel layout="none" rendered="{!apt.appRequired}">
