--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -15,16 +15,27 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="pageTitle"><a href="{!eventRegistration.Event__r.Event_Home_Link_URL__c}">{!eventRegistration.Event__r.Event_Home_Link_Title__c}</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <script>
+                window.dataLayer = window.dataLayer || [];
+                dataLayer.push({
+                    'account': '{!IF(!ISBLANK(eventRegistration.Event__r.Account__r.Name),eventRegistration.Event__r.Account__r.Name, '')}',
+                    'audience': '{!IF(!ISBLANK(eventRegistration.Event__r.Audience__c),eventRegistration.Event__r.Audience__c, '')}',
+                    'eventLabel': '{!eventRegistration.Event__r.Event_Name__c}{!IF(!ISBLANK(eventInstance.Instance_Title__c),' - ' + eventInstance.Instance_Title__c,'')}',
+                    'category': '{!IF(!ISBLANK(eventRegistration.Event__r.Filter_Category__c), eventRegistration.Event__r.Filter_Category__c, '')}',
+                    'sponsor': '{!IF(!ISBLANK(eventRegistration.Event__r.Event_Sponsor__c), eventRegistration.Event__r.Event_Sponsor__c, '')}',
+                    'page': '{!$CurrentPage.Name}'
+                });
+            </script>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
             <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                <apex:messages />
+                <apex:messages/>
             </div>
             <apex:form id="SummitEventsRegistrationCancelReview" rendered="{!!eventOver && !eventNotFound && eventRegistration.Status__c != 'Cancelled'}" styleClass="slds-grid slds-wrap">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                     <!-- EVENT BREADCRUMB -->
-                    <div class="slds-col slds-p-vertical-small slds-size_1-of-1">
+                    <div class="slds-col slds-size_1-of-1">
                         <nav role="navigation" aria-label="Breadcrumbs">
                             <ol class="slds-breadcrumb slds-list_horizontal">
                                 <apex:outputPanel rendered="{!!ISBLANK(eventPage.Event_Name__c)}" layout="none">
@@ -48,8 +59,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         <apex:outputText value="{!eventRegistration.Event__r.Event_Cancel_Review_Description__c}" escape="false"/>
                     </p>
                 </div>
-                <div id="reviewWrapper" class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                    <h3 class="slds-text-heading_medium slds-p-vertical_xx-small">
+                <div id="reviewWrapper" class="slds-col slds-size_1-of-1 slds-p-vertical_x-small">
+                    <h3 class="slds-text-heading_medium slds-p-vertical_small">
                         <apex:outputText value="{!eventRegistration.Event__r.Name}"/>
                     </h3>
                     <p class="slds-text-body slds-p-vertical_xx-small regularLists">
@@ -67,7 +78,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                         </apex:repeat>
                     </ul>
                     <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c != 'Cancelled', true, false)}">
-                        <p class="slds-text-body slds-p-vertical_xx-small">
+                        <p class="slds-text-body slds-p-vertical_small">
                             <apex:commandLink action="{!cancelRegistration}" Value="Cancel Regisistration" id="cancelReg" onClick="return confirm('Are you sure you want to cancel this registration?');" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
                         </p>
                     </apex:outputPanel>
