--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -760,12 +760,12 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                             <apex:outputPanel layout="block" styleClass="slds-form-element__control">
 
                                                 <!--Text area -->
-                                                <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text area'), true, false)}">
+                                                <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'], 'Text box'), true, false)}">
                                                     <apex:inputText value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-textarea"/>
                                                 </apex:outputPanel>
 
-                                                <!--Text box-->
-                                                <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'Text box'), true, false)}">
+                                                <!--Text area-->
+                                                <apex:outputPanel layout="block" styleClass="slds-form-element__control" rendered="{!IF(CONTAINS(eventPage['Add_Info_Question_Type_' + q + '__c'],'Text area'), true, false)}">
                                                     <apex:inputTextarea value="{!eventRegistration['Add_Info_Answer_' + q + '__c']}" styleClass="slds-input input-textbox"/>
                                                 </apex:outputPanel>
 
