Added fee fields for discount lookup and fixed layouts

--- a/force-app/main/default/layouts/Summit_Events_Discount_Code__c-Discount Code Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events_Discount_Code__c-Discount Code Layout.layout-meta.xml
@@ -100,6 +100,10 @@
         <layoutColumns/>
         <style>CustomLinks</style>
     </layoutSections>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>Summit_Events_Fee__c.Summit_Events_Discount_Code__c</relatedList>
+    </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
     <showInteractionLogPanel>false</showInteractionLogPanel>
