Added reCaptcha fields for new reCaptcha classes

--- a/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Summit_Events__c-Summit Event Default Layout.layout-meta.xml
@@ -401,6 +401,14 @@
                 <behavior>Edit</behavior>
                 <field>Keep_Registration_Open_During_Event__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>reCAPTCHA__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>reCAPTCHA_v3_Score_Fail_Text__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsLeftToRight</style>
     </layoutSections>
@@ -867,7 +875,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h8B000001VR0Q</masterLabel>
+        <masterLabel>00h04000003APw0</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
