--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -27,7 +27,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     'page': '{!$CurrentPage.Name}'
                 });
             </script>
-
+            <!--Embedd recatpcha script if requrested-->
             <apex:outputPanel layout="none" rendered="{!recaptcha.version = 3}">
                 <script src="{!recaptcha.apiUrl}?render={!recaptcha.publicKey}" type="text/javascript"></script>
                 <script>
@@ -39,7 +39,6 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                     {action: 'submit'}).then(function (token) {
                                     let responseField = document.querySelector("[id$=recaptchaResponse]");
                                     responseField.value = token;
-                                    console.log('Recaptcha Token: ' + JSON.stringify(token, null, 2));
                                     return true;
                                 });
                             });
@@ -52,7 +51,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
                 <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
+                    <apex:messages />
                 </div>
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap" style="width:100%">
 
