--- a/force-app/main/default/pages/SummitEventsRegister.page
+++ b/force-app/main/default/pages/SummitEventsRegister.page
@@ -50,9 +50,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
-                </div>
+                <apex:messages layout="list" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-notify slds-notify_toast slds-theme_warning"/>
                 <apex:form id="SummitEventRegisterForm" styleClass="slds-grid slds-wrap" style="width:100%">
 
                     <apex:actionFunction name="setParentSetting" immediate="true" onComplete="dynamicValidation();fadein();" reRender="thirdPartyRegistrant">
@@ -812,10 +810,10 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
 
                         <!-- Submit buttons -->
                         <apex:outputPanel layout="block" styleClass="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1" style="{!IF(recaptcha.version == 3, 'display:none', '')}">
-                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}" id="submitReg1" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small"/>
+                            <apex:commandLink action="{!saveContactRegistration}" onClick="fadeout(); return checkForm();" Value="{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}" id="submitReg1" styleClass="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small" html-role="button"/>
                         </apex:outputPanel>
                         <apex:outputPanel layout="block" styleClass="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1" rendered="{!recaptcha.version == 3}">
-                            <a href="#" id="submitReg2" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}</a>
+                            <button href="#" id="submitReg2" class="slds-button slds-button_brand slds-p-horizontal_xx-large slds-p-vertical_xx-small">{!IF(CONTAINS(nextUrl,'summiteventsconfirmation'), 'Register', 'Next')}</button>
                         </apex:outputPanel>
                         <div class="slds-col slds-p-vertical_medium slds-p-left_x-small slds-size_1-of-1 regularLists">
                             <apex:outputText escape="false" value="{!eventPage.Event_Footer__c}"/>
