--- a/force-app/main/default/pages/SummitEventsRegisterAppointments.page
+++ b/force-app/main/default/pages/SummitEventsRegisterAppointments.page
@@ -21,6 +21,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                 dataLayer.push({
                     'account': '{!IF(!ISBLANK(eventPage.Account__r.Name),eventPage.Account__r.Name, '')}',
                     'audience': '{!IF(!ISBLANK(eventPage.Audience__c),eventPage.Audience__c, '')}',
+                    'event': 'summit_appointments',
                     'eventLabel': '{!eventPage.Event_Name__c}{!IF(!ISBLANK(evtInstance.Instance_Title__c),' - ' + evtInstance.Instance_Title__c,'')}',
                     'category': '{!IF(!ISBLANK(eventPage.Filter_Category__c), eventPage.Filter_Category__c, '')}',
                     'sponsor': '{!IF(!ISBLANK(eventPage.Event_Sponsor__c), eventPage.Event_Sponsor__c, '')}',
