--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -33,9 +33,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="body">
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
 
-                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages/>
-                </div>
+                <apex:messages layout="list" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-notify slds-notify_toast slds-theme_warning"/>
 
                 <apex:form id="SummitEventsRegistrationCancelReview" styleClass="slds-grid slds-wrap" style="width:100%">
 
