--- a/force-app/main/default/pages/SummitEventsDonation.page
+++ b/force-app/main/default/pages/SummitEventsDonation.page
@@ -33,9 +33,7 @@ Created by Thaddaeus Dahlberg on 2/10/2020.
         <apex:define name="body">
 
             <div class="slds-grid slds-wrap" xmlns="http://www.w3.org/2000/svg" version="1.1">
-                <div class="slds-col slds-p-around_x-small slds-size_1-of-1">
-                    <apex:messages />
-                </div>
+                <apex:messages layout="list" styleClass="slds-col slds-p-around_x-small slds-size_1-of-1 slds-notify slds-notify_toast slds-theme_warning"/>
                 <apex:form id="OptionalDonation" styleClass="slds-grid slds-wrap">
 
                     <!-- EVENT BREADCRUMB -->
